menambahkan vue.js atau bakcend galery atau carousel product images

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </section>
 
       <!-- Pelayanan -->
-      <section class="pelayanan">
+      <section class="store-services">
         <div class="container">
           <div class="row text-center">
             <div class="col" data-aos="fade-up">
@@ -111,12 +111,12 @@
               data-aos-delay="100"
             >
               <img
-                class="pelayanan-gambar"
+                class="services-image"
                 src="/images/makanan-enak.svg"
                 alt="makanan"
               />
-              <div class="pelayanan-tittle">Makanan Enak</div>
-              <div class="pelayanan-deskripsi">
+              <div class="services-tittle">Makanan Enak</div>
+              <div class="services-description">
                 Kami menawarkan<br />makanan yang lezat<br />dan higienis
               </div>
             </div>
@@ -126,12 +126,12 @@
               data-aos-delay="200"
             >
               <img
-                class="pelayanan-gambar"
+                class="services-image"
                 src="/images/murah.svg"
                 alt="harga-murah"
               />
-              <div class="pelayanan-tittle">Terjangkau</div>
-              <div class="pelayanan-deskripsi">
+              <div class="services-tittle">Terjangkau</div>
+              <div class="services-description">
                 Harga makanan dan<br />minuman terjangkau
               </div>
             </div>
@@ -141,12 +141,12 @@
               data-aos-delay="300"
             >
               <img
-                class="pelayanan-gambar"
+                class="services-image"
                 src="/images/pengiriman.svg"
                 alt="pengiriman"
               />
-              <div class="pelayanan-tittle">Pengiriman</div>
-              <div class="pelayanan-deskripsi">
+              <div class="services-tittle">Pengiriman</div>
+              <div class="services-description">
                 Gratis biaya<br />pengiriman sekitar<br />wilayah cibitung
               </div>
             </div>
@@ -168,17 +168,17 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <a href="/details.html" class="menu-produk d-block">
+              <a href="/details.html" class="component-products d-block">
                 <div class="card">
-                  <div class="produk-thumbnail">
+                  <div class="products-thumbnail">
                     <div
-                      class="produk-gambar"
+                      class="products-image"
                       style="background-image: url(/images/apple-watch.jpg)"
                     ></div>
                   </div>
                   <div class="card-body">
-                    <div class="produk-teks card-tittle">Apple Watch 4</div>
-                    <div class="produk-harga">Rp.50000-,</div>
+                    <div class="products-text card-tittle">Apple Watch 4</div>
+                    <div class="products-price">Rp.50000-,</div>
                   </div>
                 </div>
               </a>
@@ -188,17 +188,17 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <a href="/details.html" class="menu-produk d-block">
+              <a href="/details.html" class="component-products d-block">
                 <div class="card">
-                  <div class="produk-thumbnail">
+                  <div class="products-thumbnail">
                     <div
-                      class="produk-gambar"
+                      class="products-image"
                       style="background-image: url(/images/apple-watch.jpg)"
                     ></div>
                   </div>
                   <div class="card-body">
-                    <div class="produk-teks card-tittle">Apple Watch 4</div>
-                    <div class="produk-harga">Rp.50000-,</div>
+                    <div class="products-text card-tittle">Apple Watch 4</div>
+                    <div class="products-price">Rp.50000-,</div>
                   </div>
                 </div>
               </a>
@@ -208,17 +208,17 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <a href="/details.html" class="menu-produk d-block">
+              <a href="/details.html" class="component-products d-block">
                 <div class="card">
-                  <div class="produk-thumbnail">
+                  <div class="products-thumbnail">
                     <div
-                      class="produk-gambar"
+                      class="products-image"
                       style="background-image: url(/images/apple-watch.jpg)"
                     ></div>
                   </div>
                   <div class="card-body">
-                    <div class="produk-teks card-tittle">Apple Watch 4</div>
-                    <div class="produk-harga">Rp.50000-,</div>
+                    <div class="products-text card-tittle">Apple Watch 4</div>
+                    <div class="products-price">Rp.50000-,</div>
                   </div>
                 </div>
               </a>
@@ -228,17 +228,17 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <a href="/details.html" class="menu-produk d-block">
+              <a href="/details.html" class="component-products d-block">
                 <div class="card">
-                  <div class="produk-thumbnail">
+                  <div class="products-thumbnail">
                     <div
-                      class="produk-gambar"
+                      class="products-image"
                       style="background-image: url(/images/apple-watch.jpg)"
                     ></div>
                   </div>
                   <div class="card-body">
-                    <div class="produk-teks card-tittle">Apple Watch 4</div>
-                    <div class="produk-harga">Rp.50000-,</div>
+                    <div class="products-text card-tittle">Apple Watch 4</div>
+                    <div class="products-price">Rp.50000-,</div>
                   </div>
                 </div>
               </a>
@@ -246,14 +246,14 @@
         </div>
         <div class="row ">
           <div class="col-md-9 my-auto">
-            <div class="pesan">
+            <div class="order-button">
               <h4 class="my-auto" data-aos="fade-up" data-aos-delay="300">
                 These are our best menu that you can pick. Click button at right
                 side for more menu
               </h4>
             </div>
           </div>
-            <div class="col-md-2 pesan">
+            <div class="col-md-2 order-button">
               <div class="tombol float-right">
                 <a
                   href="/menu.html"
