--- a/menu.html
+++ b/menu.html
@@ -75,19 +75,19 @@
       </section>
 
       <!-- Ketegori -->
-      <section class="kategori">
+      <section class="page-categories">
         <div class="container">
           <div class="d-lg-flex justify-content-between my-4">
             <h5 data-aos="fade-up" data-aos-delay="300">Menu Kami</h5>
             <ul class="d-flex" data-aos="fade-up" data-aos-delay="400">
               <li class="mr-4">
-                <a href="#" class="active menu-kategori">Semua</a>
+                <a href="#" class="active store-categories">Semua</a>
               </li>
               <li class="mr-4">
-                <a href="#" class="text-black-50 menu-kategori">Makanan</a>
+                <a href="#" class="text-black-50 store-categories">Makanan</a>
               </li>
               <li class="mr-4">
-                <a href="#" class="text-black-50 menu-kategori">Minuman</a>
+                <a href="#" class="text-black-50 store-categories">Minuman</a>
               </li>
             </ul>
           </div>
@@ -95,7 +95,7 @@
       </section>
 
       <!-- Produk -->
-      <section class="produk">
+      <section class="store-products">
         <div class="container">
           <div class="row">
             <div
@@ -103,17 +103,17 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <a href="/details.html" class="menu-produk d-block">
+              <a href="/details.html" class="component-products d-block">
                 <div class="card">
-                  <div class="produk-thumbnail">
+                  <div class="products-thumbnail">
                     <div
-                      class="produk-gambar"
+                      class="products-image"
                       style="background-image: url(/images/apple-watch.jpg)"
                     ></div>
                   </div>
                   <div class="card-body">
-                    <div class="produk-teks card-tittle">Apple Watch 4</div>
-                    <div class="produk-harga">Rp.50000-,</div>
+                    <div class="products-text card-tittle">Apple Watch 4</div>
+                    <div class="products-price">Rp.50000-,</div>
                   </div>
                 </div>
               </a>
@@ -123,17 +123,17 @@
               data-aos="fade-up"
               data-aos-delay="200"
             >
-              <a href="/details.html" class="menu-produk d-block">
+              <a href="/details.html" class="component-products d-block">
                 <div class="card">
-                  <div class="produk-thumbnail">
+                  <div class="products-thumbnail">
                     <div
-                      class="produk-gambar"
+                      class="products-image"
                       style="background-image: url(/images/apple-watch.jpg)"
                     ></div>
                   </div>
                   <div class="card-body">
-                    <div class="produk-teks card-tittle">Apple Watch 4</div>
-                    <div class="produk-harga">Rp.50000-,</div>
+                    <div class="products-text card-tittle">Apple Watch 4</div>
+                    <div class="products-price">Rp.50000-,</div>
                   </div>
                 </div>
               </a>
@@ -143,17 +143,17 @@
               data-aos="fade-up"
               data-aos-delay="300"
             >
-              <a href="/details.html" class="menu-produk d-block">
+              <a href="/details.html" class="component-products d-block">
                 <div class="card">
-                  <div class="produk-thumbnail">
+                  <div class="products-thumbnail">
                     <div
-                      class="produk-gambar"
+                      class="products-image"
                       style="background-image: url(/images/apple-watch.jpg)"
                     ></div>
                   </div>
                   <div class="card-body">
-                    <div class="produk-teks card-tittle">Apple Watch 4</div>
-                    <div class="produk-harga">Rp.50000-,</div>
+                    <div class="products-text card-tittle">Apple Watch 4</div>
+                    <div class="products-price">Rp.50000-,</div>
                   </div>
                 </div>
               </a>
@@ -163,17 +163,17 @@
               data-aos="fade-up"
               data-aos-delay="400"
             >
-              <a href="/details.html" class="menu-produk d-block">
+              <a href="/details.html" class="component-products d-block">
                 <div class="card">
-                  <div class="produk-thumbnail">
+                  <div class="products-thumbnail">
                     <div
-                      class="produk-gambar"
+                      class="products-image"
                       style="background-image: url(/images/apple-watch.jpg)"
                     ></div>
                   </div>
                   <div class="card-body">
-                    <div class="produk-teks card-tittle">Apple Watch 4</div>
-                    <div class="produk-harga">Rp.50000-,</div>
+                    <div class="products-text card-tittle">Apple Watch 4</div>
+                    <div class="products-price">Rp.50000-,</div>
                   </div>
                 </div>
               </a>
@@ -183,17 +183,17 @@
               data-aos="fade-up"
               data-aos-delay="500"
             >
-              <a href="/details.html" class="menu-produk d-block">
+              <a href="/details.html" class="component-products d-block">
                 <div class="card">
-                  <div class="produk-thumbnail">
+                  <div class="products-thumbnail">
                     <div
-                      class="produk-gambar"
+                      class="products-image"
                       style="background-image: url(/images/apple-watch.jpg)"
                     ></div>
                   </div>
                   <div class="card-body">
-                    <div class="produk-teks card-tittle">Apple Watch 4</div>
-                    <div class="produk-harga">Rp.50000-,</div>
+                    <div class="products-text card-tittle">Apple Watch 4</div>
+                    <div class="products-price">Rp.50000-,</div>
                   </div>
                 </div>
               </a>
@@ -203,17 +203,17 @@
               data-aos="fade-up"
               data-aos-delay="600"
             >
-              <a href="/details.html" class="menu-produk d-block">
+              <a href="/details.html" class="component-products d-block">
                 <div class="card">
-                  <div class="produk-thumbnail">
+                  <div class="products-thumbnail">
                     <div
-                      class="produk-gambar"
+                      class="products-image"
                       style="background-image: url(/images/apple-watch.jpg)"
                     ></div>
                   </div>
                   <div class="card-body">
-                    <div class="produk-teks card-tittle">Apple Watch 4</div>
-                    <div class="produk-harga">Rp.50000-,</div>
+                    <div class="products-text card-tittle">Apple Watch 4</div>
+                    <div class="products-price">Rp.50000-,</div>
                   </div>
                 </div>
               </a>
@@ -223,17 +223,17 @@
               data-aos="fade-up"
               data-aos-delay="700"
             >
-              <a href="/details.html" class="menu-produk d-block">
+              <a href="/details.html" class="component-products d-block">
                 <div class="card">
-                  <div class="produk-thumbnail">
+                  <div class="products-thumbnail">
                     <div
-                      class="produk-gambar"
+                      class="products-image"
                       style="background-image: url(/images/apple-watch.jpg)"
                     ></div>
                   </div>
                   <div class="card-body">
-                    <div class="produk-teks card-tittle">Apple Watch 4</div>
-                    <div class="produk-harga">Rp.50000-,</div>
+                    <div class="products-text card-tittle">Apple Watch 4</div>
+                    <div class="products-price">Rp.50000-,</div>
                   </div>
                 </div>
               </a>
@@ -243,17 +243,17 @@
               data-aos="fade-up"
               data-aos-delay="800"
             >
-              <a href="/details.html" class="menu-produk d-block">
+              <a href="/details.html" class="component-products d-block">
                 <div class="card">
-                  <div class="produk-thumbnail">
+                  <div class="products-thumbnail">
                     <div
-                      class="produk-gambar"
+                      class="products-image"
                       style="background-image: url(/images/apple-watch.jpg)"
                     ></div>
                   </div>
                   <div class="card-body">
-                    <div class="produk-teks card-tittle">Apple Watch 4</div>
-                    <div class="produk-harga">Rp.50000-,</div>
+                    <div class="products-text card-tittle">Apple Watch 4</div>
+                    <div class="products-price">Rp.50000-,</div>
                   </div>
                 </div>
               </a>
