Kelar details, lanjut cart.

--- a/details.html
+++ b/details.html
@@ -45,7 +45,7 @@
               <a href="/index.html" class="nav-link">Beranda</a>
             </li>
             <li class="nav-item">
-              <a href="/menu.html" class="nav-link active">Menu</a>
+              <a href="/menu.html" class="nav-link">Menu</a>
             </li>
             <li class="nav-item">
               <a href="/kontak.html" class="nav-link">Kontak</a>
@@ -120,44 +120,141 @@
         </div>
       </section>
 
-      <section class="store-gallery" id="gallery">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8">
-              <trantition name="slide-fade" mode="out-in">
+      <div class="container" >
+        <div class="row">
+            <div data-aos="zoom-in" class="col-lg-6 aos-init" >
+              <section  class="store-gallery" id="gallery">
+              <transition name="slide-fade" mode="out-in">
                 <img
                   :src="photos[activePhoto].url"
                   :key="photos[activePhoto].id"
-                  class="w-100 main-image"
+                  class="w-100 main-image  "
                   alt="Product image"
                 />
-              </trantition>
-            </div>
-            <div class="col-lg-2">
-              <div class="row">
-                <div
-                  class="col-3 col-lg-12 mt-2 mt-lg-0"
-                  v-for="(photo, index) in photos"
-                  :key="photo.id"
-                  data-aos="zoom-in"
-                  data-aos-delay="100"
-                >
-                  <a href="#" v-on:click="changeActive(index)">
-                    <img
-                      :src="photo.url"
-                      class="w-100 thumbnail-image"
-                      :class="{ 
-                    active: index == activePhotos 
-                  }"
-                      alt="product images"
-                    />
-                  </a>
+              </transition>
+                
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="row justify-content-center">
+                      <div
+                        class="col-3 col-lg-3 mt-2 mt-lg-3 px-2"
+                        v-for="(photo, index) in photos"
+                        :key="photo.id"
+                        data-aos="zoom-in"
+                        data-aos-delay="100"
+                      >
+                        <a href="#" v-on:click="changeActive(index)">
+                          <img
+                            :src="photo.url"
+                            class="w-100 thumbnail-image"
+                            :class="{ 
+                              active: index == activePhoto
+                            }"
+                            alt="product images"
+                          />
+                        </a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-              </div>
+              </section>
+            </div>
+
+            <div class="col-12 col-md-5">
+              <section class="store-details-container">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="store-details-container" >
+                      <section class="store-heading">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-12  aos-init" data-aos="fade-up" data-aos-delay="100">
+                              <h3>Ayam Bakar</h3>
+                              <div class="price">Rp.10,000</div>
+                            </div>
+                          </div>
+                        </div>
+                      </section>
+                      <section class="store-description">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-12  aos-init" data-aos="fade-up" data-aos-delay="200">
+                              <p>
+                                The Nike Air Max 720 SE goes bigger than ever before with
+                                Nike's tallest Air unit yet for unimaginable, all-day comfort.
+                                There's super breathable fabrics on the upper, while colours
+                                add a modern edge.
+                              </p>
+                            </div>
+                          </div>
+                      </section>
+                      <section class="store-button">
+                        <div class="container">
+                          <div class="row mt-lg-4  aos-init" data-aos="fade-up" data-aos-delay="300">
+                            <div class="col-12">
+                              <div class="row d-flex justify-content-between">
+                                <div class="col-6 col-lg-6" data-aos="zoom-in">
+                                  <a
+                                    href="/menu.html"
+                                    class="btn btn-success py-2 text-white btn-block mb-3"
+                                    >Kembali
+                                  </a>
+                                </div>
+                                <div class="col-6 col-lg-6" data-aos="zoom-in">
+                                  <a
+                                    href="/cart.html"
+                                    class="btn btn-success py-2 text-white btn-block mb-3"
+                                    >Pesan
+                                  </a>
+                                </div>
+                            </div>
+                            </div>
+                          </div>
+                        </div>
+                      </section>
+                    </div>
+
+                  </div>
+                </div>
+              </section>
+            </div>
+        </div>
+        
+      <section class="store-details-container">
+        <div class="store-review" >
+          <div class="row">
+            <div data-aos="fade-up" data-aos-delay="100" class="col-12 col-lg-8 my-3 aos-init">
+              <h4>Customer Review</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div data-aos="fade-up" data-aos-delay="200" class="col-12 col-lg-8 my-3 aos-init">
+              <ul class="list-unstyled">
+                <li class="media">
+                  <img src="/images/customer-review1.png" alt="Customer Review Photo" class="mr-3 rounded-circle">
+                  <div class="media-body">
+                    <h5 class="mt-2 mb-1">Helmi</h5>I thought it was not good for living room. I really happy
+                    to decided buy this product last week now feels like homey.
+                  </div>
+                </li>
+                <li class="media">
+                  <img src="/images/customer-review2.png" alt="Customer Review Photo" class="mr-3 rounded-circle">
+                  <div class="media-body">
+                    <h5 class="mt-2 mb-1">Muzakir</h5>Color is great with the minimalist concept. Even I thought it was
+                    made by Cactus industry. I do really satisfied with this.</div>
+                </li>
+                <li class="media">
+                  <img src="/images/customer-review3.png" alt="Customer Review Photo" class="mr-3 rounded-circle">
+                  <div class="media-body">
+                    <h5 class="mt-2 mb-1">Kanza</h5>When I saw at first, it was really awesome to have with.
+                    Just let me know if there is another upcoming product like this.</div>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
       </section>
+     </div>
     </div>
 
     <!-- Footer -->
@@ -217,10 +314,6 @@
             {
               id: 3,
               url: "/images/product-details-3.jpg",
-            },
-            {
-              id: 4,
-              url: "/images/product-details-4.jpg",
             },
           ],
         },
