--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 src="/images/makanan-enak.svg"
                 alt="makanan"
               />
-              <div class="services-tittle">Makanan Enak</div>
+              <div class="services-title">Makanan Enak</div>
               <div class="services-description">
                 Kami menawarkan<br />makanan yang lezat<br />dan higienis
               </div>
@@ -130,7 +130,7 @@
                 src="/images/murah.svg"
                 alt="harga-murah"
               />
-              <div class="services-tittle">Terjangkau</div>
+              <div class="services-title">Terjangkau</div>
               <div class="services-description">
                 Harga makanan dan<br />minuman terjangkau
               </div>
@@ -145,7 +145,7 @@
                 src="/images/pengiriman.svg"
                 alt="pengiriman"
               />
-              <div class="services-tittle">Pengiriman</div>
+              <div class="services-title">Pengiriman</div>
               <div class="services-description">
                 Gratis biaya<br />pengiriman sekitar<br />wilayah cibitung
               </div>
