--- a/cart.html
+++ b/cart.html
@@ -120,6 +120,216 @@
           </div>
         </div>
       </section>
+
+      <section class="store-cart">
+        <div class="container">
+          <!-- Cart -->
+          <div class="row" data-aos="fade-up" data-aos-delay="100">
+              <div class="col-12 table-responsive">
+                <table class="table table-borderless table-cart">
+                  <thead>
+                    <tr>
+                      <td>Gambar</td>
+                      <td>Nama</td>
+                      <td>Harga</td>
+                      <td class="">Qty</td>
+                      <td></td>
+                    </tr>
+                  </thead>
+                  <tbody> 
+                    <tr>
+                      <td style="width: 25%;">
+                        <img src="/images/cart-image.jpg" alt="" class="cart-image">
+                      </td>
+                      <td style="width: 20%;">
+                        <div class="product-title">Ayam Bakar</div>
+                      </td>
+                      <td style="width: 20%;">
+                        <div class="product-title">Rp10.000</div>
+                      </td>
+                      <td style="width: 10%;">
+                        <div class="product-title">1</div>
+                      </td>
+                      <td class="text-center">
+                        <a href="#" class="btn btn-cart btn-outline-success px-0">
+                          -
+                        </a>
+                        <a href="#" class="btn btn-cart btn-outline-success px-0">
+                          +
+                        </a>
+                        <a href="#" class="btn btn-cart ml-md-2 px-0">
+                          <img src="/images/trash-icon.svg" alt="">
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td style="width: 25%;">
+                        <img src="/images/cart-image.jpg" alt="" class="cart-image">
+                      </td>
+                      <td style="width: 20%;">
+                        <div class="product-title">Ayam Bakar</div>
+                      </td>
+                      <td style="width: 20%;">
+                        <div class="product-title">Rp10.000</div>
+                      </td>
+                      <td style="width: 10%;">
+                        <div class="product-title">1</div>
+                      </td>
+                      <td class="text-center">
+                        <a href="#" class="btn btn-cart btn-outline-success px-0">
+                          -
+                        </a>
+                        <a href="#" class="btn btn-cart btn-outline-success px-0">
+                          +
+                        </a>
+                        <a href="#" class="btn btn-cart ml-md-2 px-0">
+                          <img src="/images/trash-icon.svg" alt="">
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td style="width: 25%;">
+                        <img src="/images/cart-image.jpg" alt="" class="cart-image">
+                      </td>
+                      <td style="width: 20%;">
+                        <div class="product-title">Ayam Bakar</div>
+                      </td>
+                      <td style="width: 20%;">
+                        <div class="product-title">Rp10.000</div>
+                      </td>
+                      <td style="width: 10%;">
+                        <div class="product-title">1</div>
+                      </td>
+                      <td class="text-center">
+                        <a href="#" class="btn btn-cart btn-outline-success px-0">
+                          -
+                        </a>
+                        <a href="#" class="btn btn-cart btn-outline-success px-0">
+                          +
+                        </a>
+                        <a href="#" class="btn btn-cart ml-md-2 px-0">
+                          <img src="/images/trash-icon.svg" alt="">
+                        </a>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+          </div>
+          <!-- Garis Pembatas -->
+          <div class="row" data-aos="fade-up" data-aos-delay="200">
+            <div class="col-md-11">
+              <hr>
+            </div>
+          </div>
+          <!-- Total Cart -->
+          <div class="row" data-aos="fade-up" data-aos-delay="250">
+            <div class="col-12 table-responsive">
+              <table class="table table-borderless table-cart">
+                <thead>
+                  <tr class="cart-total">
+                    <td style="width: 25%;"></td>
+                    <td style="width: 20%;"></td>
+                    <td style="width: 20%;">Rp30.000</td>
+                    <td style="width: 10%;">3</td>
+                    <td class="text-center" >Total</td>
+                  </tr>
+              </table>
+            </div>
+          </div>
+          <!-- Garis Pembapatas -->
+          <div class="row" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-md-11">
+            <hr>
+          </div>
+          </div>
+          <!-- Alamat -->
+          <div class="row mb-2 aos-init" data-aos="fade-up" data-aos-delay="350">
+            <div class="col-12">
+              <h5 class="mb-4">Detail Pengiriman</h5>
+            </div>
+            <div class="col-md-11">
+              <div class="form-group">
+                <label for="address">Alamat</label>
+                <input 
+                type="text" class="form-control" id="address"
+                name="alamat"
+                value="Alamat">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="district">Kecamatan/Kabupaten</label>
+                <select name="district" id="district" class="form-control">
+                  <option value="Beji">Beji</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="city">Kota</label>
+                <select name="city" id="city" class="form-control">
+                  <option value="Depok">Depok</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="form-group">
+                <label for="postalCode">Kode Pos</label>
+                <select name="postalCode" id="postalCode" class="form-control">
+                  <option value="1312">1312</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <div class="form-group">
+                <label for="province">Provinsi</label>
+                <select name="province" id="province" class="form-control">
+                  <option value="Jawa Barat">Jawa Barat</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="mobile">Nomor Telepon</label>
+                <input 
+                type="text" class="form-control" id="mobile"
+                name="mobile"
+                value="Nomor Telepon">
+              </div>
+            </div>
+          </div>
+          <!-- Garis Pembatas -->
+          <div class="row" data-aos="fade-up" data-aos-delay="400">
+            <div class="col-md-11">
+              <hr>
+            </div>
+          </div>
+          <!-- Checkout -->
+          <div class="row" data-aos="fade-up" data-aos-delay="450">
+            <div class="col-12">
+              <h5 class="mb-2">Detail Pengiriman</h5>
+            </div>
+            <div class="col-6 col-md-2">
+              <div class="product-title">0</div>
+              <div class="product-subtitle">Ongkir</div>
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="product-title">3</div>
+              <div class="product-subtitle">Quantity</div>
+            </div>
+            <div class="col-4 col-md-3">
+              <div class="cart-total text-success">Rp30.000</div>
+              <div class="product-subtitle">Total</div>
+            </div>
+            <div class="col-8 col-md-3">
+              <a href="/success.html" class="btn btn-success mt-4 px-4 btn-block">Checkout</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      
     </div>
 
     <!-- Footer -->
@@ -136,9 +346,9 @@
           </div>
           <div class="col-md-3">
             <p class="font-weight-bold">Alamat</p>
-            <p>
+<!--             <p>
               JL. Raya Setu - Serang, <br />Cibenning, Kec. Setu, <br />Bekasi,
-              <br />Jawa Barat, 17320.
+              <br />Jawa Barat, 17320. -->
             </p>
           </div>
         </div>
@@ -158,37 +368,6 @@
       AOS.init();
     </script>
     <script src="/vendor/vue/vue.js"></script>
-    <!-- Script vue.js untuk galery -->
-    <script>
-      var gallery = new Vue({
-        el: "#gallery",
-        mounted() {
-          AOS.init();
-        },
-        data: {
-          activePhoto: 0,
-          photos: [
-            {
-              id: 1,
-              url: "/images/product-details-1.jpg",
-            },
-            {
-              id: 2,
-              url: "/images/product-details-2.jpg",
-            },
-            {
-              id: 3,
-              url: "/images/product-details-3.jpg",
-            },
-          ],
-        },
-        methods: {
-          changeActive(id) {
-            this.activePhoto = id;
-          },
-        },
-      });
-    </script>
     <script src="/script/navbar-scroll.js"></script>
   </body>
 </html>
