--- a/details.html
+++ b/details.html
@@ -29,7 +29,7 @@
     >
       <div class="container">
         <a href="/index.html" class="navbar-brand">
-          <img src="/images/logowartegsari.svg" alt="Logo" />
+          <!-- <img src="/images/logowartegsari.svg" alt="Logo" /> -->
         </a>
         <button
           class="navbar-toggler"
@@ -193,14 +193,14 @@
                           <div class="row mt-lg-4  aos-init" data-aos="fade-up" data-aos-delay="300">
                             <div class="col-12">
                               <div class="row d-flex justify-content-between">
-                                <div class="col-6 col-lg-6" data-aos="zoom-in">
+<!--                                 <div class="col-6 col-lg-6" data-aos="zoom-in">
                                   <a
                                     href="/menu.html"
                                     class="btn btn-success py-2 text-white btn-block mb-3"
                                     >Kembali
                                   </a>
-                                </div>
-                                <div class="col-6 col-lg-6" data-aos="zoom-in">
+                                </div> -->
+                                <div class="col-lg-12" data-aos="zoom-in">
                                   <a
                                     href="/cart.html"
                                     class="btn btn-success py-2 text-white btn-block mb-3"
@@ -271,9 +271,9 @@
           </div>
           <div class="col-md-3">
             <p class="font-weight-bold">Alamat</p>
-            <p>
+<!--             <p>
               JL. Raya Setu - Serang, <br />Cibenning, Kec. Setu, <br />Bekasi,
-              <br />Jawa Barat, 17320.
+              <br />Jawa Barat, 17320. -->
             </p>
           </div>
         </div>
