--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
     >
       <div class="container">
         <a href="/index.html" class="navbar-brand">
-          <img src="/images/logowartegsari.svg" alt="Logo" />
+         <!--  <img src="/images/logowartegsari.svg" alt="Logo" /> -->
         </a>
         <button
           class="navbar-toggler"
@@ -69,7 +69,7 @@
       <section data-aos="fade-up" data-aos-delay="200">
         <div class="container">
           <div id="imagecontentMenu" class="text-right">
-            <img class="d-block w-100" src="/images/banner.jpg" alt="Banner" />
+            <img class=" d-none d-md-block w-100" src="/images/banner.jpg" style="height: 280px;"  alt="Banner" />
           </div>
         </div>
       </section>
@@ -81,13 +81,13 @@
             <h5 data-aos="fade-up" data-aos-delay="300">Menu Kami</h5>
             <ul class="d-flex" data-aos="fade-up" data-aos-delay="400">
               <li class="mr-4">
-                <a href="#" class="active store-categories">Semua</a>
-              </li>
-              <li class="mr-4">
-                <a href="#" class="text-black-50 store-categories">Makanan</a>
+                <a href="#" class="active store-categories">Makanan</a>
               </li>
               <li class="mr-4">
                 <a href="#" class="text-black-50 store-categories">Minuman</a>
+              </li>
+              <li class="mr-4">
+                <a href="#" class="text-black-50 store-categories">Paketan</a>
               </li>
             </ul>
           </div>
@@ -276,10 +276,10 @@
       </div>
       <div class="col-md-3">
         <p class="font-weight-bold">Alamat</p>
-        <p>JL. Raya Setu - Serang,
+<!--         <p>JL. Raya Setu - Serang,
           <br>Cibenning, Kec. Setu, 
           <br>Bekasi,
-          <br>Jawa Barat, 17320.</p>
+          <br>Jawa Barat, 17320.</p> -->
       </div>
     </div>
     <div class="row text-center" style="margin-top:40px;">
