--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     >
       <div class="container">
         <a href="/index.html" class="navbar-brand">
-          <img src="/images/logowartegsari.svg" alt="Logo" />
+          <!-- <img src="/images/logowartegsari.svg" alt="Logo" /> -->
         </a>
         <button
           class="navbar-toggler"
@@ -273,19 +273,19 @@
       <div class="container">
         <div class="row" style="margin-top: 40px;">
           <div class="col-md-3">
-            <p class="font-weight-bold">Warteg Sari</p>
+            <p class="font-weight-bold">Warteg</p>
           </div>
           <div class="col-md-3">
             <p class="font-weight-bold">Kontak Kami</p>
             <p>+62 8515 5288 869</p>
-            <p>wartegsari@gmail.com</p>
+<!--             <p>wartegsari@gmail.com</p> -->
           </div>
           <div class="col-md-3">
             <p class="font-weight-bold">Alamat</p>
-            <p>JL. Raya Setu - Serang,
+<!--             <p>JL. Raya Setu - Serang,
               <br>Cibenning, Kec. Setu, 
               <br>Bekasi,
-              <br>Jawa Barat, 17320.</p>
+              <br>Jawa Barat, 17320.</p> -->
           </div>
         </div>
         <div class="row text-center" style="margin-top:40px;">
